--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         *{
             font-family: Arial, Helvetica, sans-serif;
@@ -12,21 +12,27 @@
         body{
             height: 100vh;
             /* config para usar toda a tela */
-            background-color: black;
-            background-image: url(img/wallpaper002.jpg);
-            background-position: center top;
+            /* background-position: center center; */
             /* centralizar a imagem do BG */
-            background-repeat: no-repeat;
+            /* background-repeat: no-repeat; */
             /* imagem do BG nao repete */
-            background-size: cover;
+            /* background-size: cover;  */
             /* mudar o tamanho do BG. recomenda usar 100% */
+            /* background-attachment: fixed; */
+            /* com scroll BG vai rolar junto com o conteudo e com o fixed só o conteudo rola*/
+            
+            /* Shorthand - backgound
+               color > img > position > repeat > [size] > attachment */
+            
+            background: black url(img/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 600px;
             padding: 10px;
             margin: auto;
-            border: 1px solid green;
+            border: 1px solid rgb(0, 238, 255);
             border-radius: 17px;
         }
     </style>
