--- a/Exercicios/ex024/pag001.html
+++ b/Exercicios/ex024/pag001.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Reponsivas</title>
+    <title>Site de Teste</title>
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
@@ -33,8 +33,6 @@
     </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, maxime. Fuga necessitatibus iste libero assumenda natus magni aliquid aperiam. Facilis neque nihil amet mollitia cupiditate obcaecati nostrum? Omnis, unde libero.</p>
     <div class="container">
         <table>
             <caption>Vendas de produtos por mês</caption>
