--- a/Exercicios/ex025/form001.html
+++ b/Exercicios/ex025/form001.html
@@ -28,8 +28,20 @@
             width: 300px;
             padding: 10px;
             border: 1px solid black;
-            box-shadow: 3px 3px 5px black;
+            border-radius: 5px;
+            box-shadow: 10px 10px 15px black;
             background-color: rgb(42, 56, 253);
+        }
+        .button{ 
+            border-radius: 5px;
+            border: transparent;
+            width: 60px;
+            height: 30px;
+        }
+        .button:hover{
+            background-color: lightgray;
+            box-shadow: 2px 2px 5px black;
+            pointer-events: painted;
         }
         
     </style>
@@ -37,12 +49,12 @@
 <body>
     <h1>Meu primeiro Formulário</h1>
     <div class="container">
-        <form action="cadastro.php" autocomplete="off">
+        <form action="cadastro.php" method="post" autocomplete="off">
             <p><label for="inome">Nome:</label>
                 <input type="text" name="nome" id="inome"></p>
             <p><label for="isobrenome">Sobrenome</label>:
                  <input type="text" name="sobrenome" id="isobrenome"></p>
-            <p><input type="submit" value="Enviar" id="enviar"></p>
+            <p><input type="submit" value="Enviar" class="button" id="enviar"></p>
         </form>
     </div>
 </body>
