--- a/Exercicios/ex026/mq001/index.html
+++ b/Exercicios/ex026/mq001/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/imp ressora.css" media="print">
 </head>
 <body>
-    
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Politíca</li>
+                <li>Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar Media Queries</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ab molestias laboriosam perspiciatis placeat, sint qui voluptatum voluptate eaque sit expedita earum assumenda mollitia amet omnis aliquam voluptatem eligendi accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, nulla natus maxime impedit eos enim voluptate rem ipsa blanditiis deleniti corrupti eaque in libero doloremque, omnis consequuntur minus cumque! At?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum obcaecati, tempora temporibus libero nulla, quaerat, hic neque voluptatibus fuga perferendis delectus. Omnis accusamus asperiores necessitatibus quia sint laborum neque ea?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ab molestias laboriosam perspiciatis placeat, sint qui voluptatum voluptate eaque sit expedita earum assumenda mollitia amet omnis aliquam voluptatem eligendi accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, nulla natus maxime impedit eos enim voluptate rem ipsa blanditiis deleniti corrupti eaque in libero doloremque, omnis consequuntur minus cumque! At?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum obcaecati, tempora temporibus libero nulla, quaerat, hic neque voluptatibus fuga perferendis delectus. Omnis accusamus asperiores necessitatibus quia sint laborum neque ea?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ab molestias laboriosam perspiciatis placeat, sint qui voluptatum voluptate eaque sit expedita earum assumenda mollitia amet omnis aliquam voluptatem eligendi accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, nulla natus maxime impedit eos enim voluptate rem ipsa blanditiis deleniti corrupti eaque in libero doloremque, omnis consequuntur minus cumque! At?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum obcaecati, tempora temporibus libero nulla, quaerat, hic neque voluptatibus fuga perferendis delectus. Omnis accusamus asperiores necessitatibus quia sint laborum neque ea?
+            </p>
+        </article>
+    </main>
 </body>
 </html>
